--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "run-p dev:*",
+    "dev:server": "tsc -w -p server --rootDir server/src --outDir dist/server & pm2 startOrRestart ecosystem.config.js --watch",
+    "dev:client": "ng serve",
+    "build": "run-p build:*",
+    "build:client": "ng build",
+    "build:server": "tsc -p server --rootDir server/src --outDir dist/server",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -24,7 +28,9 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "nest.js": "^1.0.6",
     "rxjs": "^5.1.0",
+    "typeorm": "0.0.11",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -38,9 +44,10 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "npm-run-all": "^4.0.2",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
